crates/ars-components/src/utility/error_boundary/snapshots/ars_components__utility__error_boundary__tests__error_boundary_list.snap
---
source: crates/ars-components/src/utility/error_boundary.rs
expression: snapshot_attrs(&list_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "list",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "error-boundary",
            ),
        ),
    ],
    styles: [],
}
